--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@ log/
 .vscode/
 scripts/ppew/
 scripts/transfer/laser.npy
+scripts/transfer/laser_test.npy
 scripts/transfer/laser_fine.npy
 scripts/transfer/tf.npy
+scripts/transfer/tf_test.npy
 scripts/transfer/tf_fine.npy
 scripts/transfer/ppew
